Created main page

--- a/create.html
+++ b/create.html
@@ -9,13 +9,13 @@
 <body>
     <div id="header">
         <div id="logo">
-            <img id="hal" src="hal-9000.png"/>
+            <img id="hal" src="hal-9000.png" alt="hal"/>
             <h1>Disc Golf Nation</h1>
         </div>
 
         <div id="info">
             <div id="cart_group">
-                <img id="cart" src="shopping_cart-24px.svg">
+                <img id="cart" src="shopping_cart-24px.svg" alt="cart">
                 <p id="cart_link">Cart</p>
             </div>
             <a id="create_link" href="create.html">Create Account</a>
@@ -28,7 +28,7 @@
         <a>Forums</a>
         <a>Play</a>
         <a>Learn</a>
-        <a>Your Bag</a>
+        <a id="bag_link">Your Bag</a>
     </nav>
     <div id="create_box">
         <h2 id="create_title">Create Account</h2>
