--- a/create.html
+++ b/create.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <nav>
-        <a id="home_link">Home</a>
+        <a id="home_link" href="index.html">Home</a>
         <a>Store</a>
         <a>Forums</a>
         <a>Play</a>
